Issue #20204: Added the __module__ attribute to _tkinter classes.